samples/_failures_safe/1761437989_384c6f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_db93ce6e.c:189:1: error: expected ‘=’, ‘,’, ‘;’, ‘asm’ or ‘__attribute__’ at end of input
  189 | void freeGraph
      | ^~~~
